Fix z-index resetting too early during draggable card snapback animation. Previously, all cards shared the same z-index, causing the dragged card to momentarily appear behind overlapping cards (e.g., dragging card 1 near card 2 and releasing would result in card 1 snapping back while briefly going under card 2)

--- a/src/sass/pages/_index.scss
+++ b/src/sass/pages/_index.scss
@@ -70,16 +70,9 @@
         font-size: clamp(30px, 5vw, 64px);
     }
 
-    //   Doesn't work
-    &:not(.dragging) {
-        animation: z-index-hack var(--_draggable-transition-duration) ease-in-out backwards;
-    }
-
     &.dragging {
         // background-color: lightgrey;
         filter: brightness(150%);
-        z-index: 1;
-
         font-weight: bold;
 
 
@@ -88,7 +81,7 @@
         cursor: grabbing;
     }
 
-    &__sampe {
+    &__sample {
         display: none;
     }
 
@@ -120,12 +113,6 @@
     }
 }
 
-@keyframes z-index-hack {
-    99.99% {
-        z-index: 1;
-    }
-
-    100% {
-        z-index: 0;
-    }
+.keep-high-z-index {
+    z-index: 1;
 }
